--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^20.11.17",
     "eslint": "^9.21.0",
     "globals": "^16.0.0",
+    "node": "^23.9.0",
     "tsx": "^4.7.1",
     "typescript-eslint": "^8.26.0"
   },
